# swarm

./: .gitignore  AGENTS.md  NETWORK_AND_CHARGING.md  NEXT.md  PLAN.md  README.md  VISION.md  pyproject.toml
examples/: autonomous_operation.py  basic_scenario.py  charging_management.py  combined_ops.py  gps_denied_navigation.py  imu_navigation.py  mesh_comms.py  network_partition.py
src/: __init__.py  arena.py  detection.py  entities.py  imu.py  mesh.py  metrics.py  navigation.py  network.py  physics.py  strategy.py  visualization.py
tests/: test_autonomous_operation.py  test_battery_monitoring.py  test_charging.py  test_charging_heuristic.py  test_mesh_visualization.py  test_network_partition.py  test_patrol_handoff.py  test_state_sync.py  test_time_based_charging.py  test_time_based_charging_simple.py
